--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-This repository serves as a support hub for the Node-RED Alexa Connector platform and the eventual release location of its platform code under a restrictive (source-available)[https://en.wikipedia.org/wiki/Source-available_software] license for transparency and community involvement.
+This repository serves as a support hub for the Node-RED Alexa Connector platform and the eventual release location of its platform code under a restrictive [source-available](https://en.wikipedia.org/wiki/Source-available_software) license for transparency and community involvement.
 
 © 2019 Node-RED Alexa Connector (node-red-alexa.io)
